tests/kyverno-policies/sync-secrets/resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: webservice
  labels:
    sync-secret: webservices-read
---
apiVersion: v1
kind: Namespace
metadata:
  name: paas
