tests/kyverno-policies/sync-secrets/webservices-read-gen.yaml
apiVersion: v1
kind: Secret
metadata:
  name: webservices-read-gen
  namespace: webservice
type: kubernetes.io/dockerconfigjson
data:
  .dockerconfigjson: supersecret
