tests/kyverno-policies/sync-secrets/webservices-read.yaml
apiVersion: v1
kind: Secret
metadata:
  name: webservices-read
  namespace: default
type: kubernetes.io/dockerconfigjson
data:
  .dockerconfigjson: supersecret
