tests/kyverno-policies/sync-secrets/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: sync-secrets
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: values.yaml
results:
  - policy: sync-secrets
    rule: sync-image-pull-secret
    resources:
      - webservice
    generatedResource: webservices-read-gen.yaml
    cloneSourceResource: webservices-read.yaml
    kind: Namespace
    result: pass
# Not working
# https://github.com/kyverno/kyverno/issues/8942
#  - policy: sync-secrets
#    rule: sync-image-pull-secret
#    resources:
#      - paas
#    cloneSourceResource: webservices-read.yaml
#    kind: Namespace
#    result: skip
#checks:
#- match:
#    resource:
#      kind: Namespace
#      metadata:
#        name: paas
#    policy:
#      kind: ClusterPolicy
#      metadata:
#        name: sync-secret
#    rule:
#      name: sync-image-pull-secret
#  error:
#    (status != 'pass'): true
