tests/kyverno-policies/sync-secrets/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaceSelector:
  - name: webservice
    labels:
      sync-secret: webservices-read
  - name: paas
